Closed Bug 1628298 Opened 4 years ago Closed 4 years ago

Permafailing Assertion failure: mPrivateStorage, at /builds/worker/checkouts/gecko/netwerk/cookie/CookieService.cpp when Gecko 77 merges to Beta on 2020-05-04

Categories

(Core :: Networking: Cookies, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox74 --- unaffected
firefox75 --- unaffected
firefox76 --- unaffected
firefox77 --- verified

People

(Reporter: nataliaCs, Assigned: baku)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

Central as Beta:
https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&selectedJob=296787571&revision=ab5de001a168243326acca3420f5667acad93d26&searchStr=%28Mn%29

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=296787571&repo=try&lineNumber=70523

[task 2020-04-08T12:03:28.592Z] 12:03:28 INFO - Assertion failure: mPrivateStorage, at /builds/worker/checkouts/gecko/netwerk/cookie/CookieService.cpp:2094
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #01: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x835c412]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #02: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x11801da]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #03: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x117ff65]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #04: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1181bb1]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #05: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6162beb]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #06: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x616250e]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #07: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6163c40]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #08: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x61573f7]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #09: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x614d592]
[task 2020-04-08T12:03:28.722Z] 12:03:28 INFO - #10: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x616245e]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #11: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6163c40]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #12: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6163e90]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #13: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6251db9]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #14: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1178370]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #15: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1c1b7c]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #16: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x835c469]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #17: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1e869a]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #18: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x20d31a]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #19: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x22feb2]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #20: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1e3d36]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #21: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1e3c42]
[task 2020-04-08T12:03:28.723Z] 12:03:28 INFO - #22: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x835c412]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #23: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x11801da]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #24: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x117ff65]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #25: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1181bb1]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #26: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6162beb]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #27: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x616250e]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #28: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6163c40]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #29: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x61573f7]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #30: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x614d592]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #31: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x616245e]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #32: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6163c40]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #33: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6163e90]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #34: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x653f42c]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #35: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x62ea055]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #36: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x63b69e9]
[task 2020-04-08T12:03:28.724Z] 12:03:28 INFO - #37: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6162beb]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #38: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x616250e]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #39: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6163c40]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #40: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6163e90]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #41: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x6252c52]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #42: mozilla_dump_image[Z:\task_1586346406\build\application\firefox\xul.dll +0x23f0ce3]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #43: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x8628e]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #44: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x85344]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #45: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x73c58]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #46: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x74949]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #47: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1143614]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #48: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x1993aa]
[task 2020-04-08T12:03:28.725Z] 12:03:28 INFO - #49: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x19823b]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #50: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x3702cd]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #51: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x37c2c3]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #52: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0x37c569]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #53: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0xe578f]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #54: Ordinal0[Z:\task_1586346406\build\application\firefox\xul.dll +0xeefcc]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #55: XRE_GetBootstrap[Z:\task_1586346406\build\application\firefox\xul.dll +0x600dee0]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #56: workerlz4_maxCompressedSize[Z:\task_1586346406\build\application\firefox\xul.dll +0x5fd3764]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #57: workerlz4_maxCompressedSize[Z:\task_1586346406\build\application\firefox\xul.dll +0x5fe0094]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #58: workerlz4_maxCompressedSize[Z:\task_1586346406\build\application\firefox\xul.dll +0x5fe091a]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #59: Ordinal0[Z:\task_1586346406\build\application\firefox\firefox.exe +0x158f]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #60: Ordinal0[Z:\task_1586346406\build\application\firefox\firefox.exe +0x120e]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #61: TargetNtUnmapViewOfSection[Z:\task_1586346406\build\application\firefox\firefox.exe +0x91418]
[task 2020-04-08T12:03:28.726Z] 12:03:28 INFO - #62: BaseThreadInitThunk[C:\Windows\System32\KERNEL32.DLL +0x13034]
[task 2020-04-08T12:03:28.727Z] 12:03:28 INFO - #63: RtlUserThreadStart[C:\Windows\SYSTEM32\ntdll.dll +0x71461]

Flags: needinfo?(amarchesini)
Summary: Permafailing 12:03:28 INFO - Assertion failure: mPrivateStorage, at /builds/worker/checkouts/gecko/netwerk/cookie/CookieService.cpp when Gecko 77 merges to Beta on 2020-05-04 → Permafailing Assertion failure: mPrivateStorage, at /builds/worker/checkouts/gecko/netwerk/cookie/CookieService.cpp when Gecko 77 merges to Beta on 2020-05-04
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/75d4fcf882a3
Nullify both Cookie storages (private and persistent) before calling Close(), r=smaug
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: