Bug 1628298 - Nullify both Cookie storages (private and persistent) before calling Close(), r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D70192